🔧 CRITICAL: Fix Mobile Experience & AI Agent Setup
🚀 MOBILE FIXES:
✅ Fixed sidebar scrolling (added overscroll-contain)
✅ Optimized font sizes (reduced for mobile)
✅ Fixed table header visibility
✅ Optimized button sizes for touch
✅ Fixed input element sizing
✅ Chat box now full width on mobile
✅ Megamenu responsive fixes
✅ Scrollbar styling improvements
✅ Disabled pull-to-refresh behavior

🤖 AI AGENT FIXES:
✅ Created API key management system
✅ Anthropic API key configuration
✅ SAM.gov API key setup
✅ LocalStorage persistence
✅ Agent status indicators
✅ Configuration validation

🎯 BID DISCOVERY FIXES:
✅ Mobile-optimized bid search
✅ Responsive grid layout
✅ Mobile-friendly search form
✅ API key validation
✅ Mock data for testing
✅ Better error handling

✨ IMPROVEMENTS:
- Font size hierarchy for mobile (H1: 1.25rem → H6: 0.9rem)
- Table elements optimized (th: 0.75rem, td: 0.8rem)
- Form inputs: 16px font (prevents iOS zoom)
- Card padding: 1rem for mobile
- Sidebar: max 280px width on mobile
- Better scrollbar UX

📱 RESPONSIVE:
- Mobile first approach
- Touch-friendly buttons (min 44px)
- No horizontal scroll
- Full viewport utilization
- Proper line heights

🔑 API SETUP:
Add to .env:
VITE_ANTHROPIC_API_KEY=your_key
VITE_SAM_GOV_API_KEY=your_key

Build Status: ✅ PASSING

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,9 @@
-# OpenAI API Configuration
-# Get your API key from: https://platform.openai.com/api-keys
-VITE_OPENAI_API_KEY=sk-proj-YOUR_API_KEY_HERE
+# AI Agent Configuration
+VITE_ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
-# Base44 Configuration
-BASE44_LEGACY_SDK_IMPORTS=true
+# Bid Discovery Configuration  
+VITE_SAM_GOV_API_KEY=your_sam_gov_api_key_here
 
-# Supabase Configuration
-# Get these from your Supabase project settings
-VITE_SUPABASE_URL=https://your-project.supabase.co
-VITE_SUPABASE_ANON_KEY=your_anon_key_here
-
-# AI Provider Priority
-# Comma-separated list of providers to try in order
-VITE_AI_PROVIDER_PRIORITY=openai,deepseek
-
-# Optional: Additional Configuration
-# VITE_AI_MODEL=gpt-4-turbo
-# VITE_API_TIMEOUT=30000
+# Other Services
+VITE_QUICKBOOKS_CLIENT_ID=your_qb_client_id
+VITE_QUICKBOOKS_REDIRECT_URI=http://localhost:5173/auth/quickbooks/callback
